Changed limits and url

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:hgGoW69yMt2IuKTlqq/DO+vjfF8c96sZp7PcoOSpIBY=
 APP_DEBUG=true
-APP_URL=west-pulling.gl.at.ply.gg:9130
+APP_URL=/west-pulling.gl.at.ply.gg:9130
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
