Some changes to update method

--- a/.env
+++ b/.env
@@ -3,7 +3,8 @@ APP_ENV=local
 APP_KEY=base64:hgGoW69yMt2IuKTlqq/DO+vjfF8c96sZp7PcoOSpIBY=
 APP_DEBUG=true
 APP_URL=/west-pulling.gl.at.ply.gg:9130
-
+#/west-pulling.gl.at.ply.gg:9130
+#http://localhost:8000
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
